--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,6 @@
 # config.yaml
 # snakemake -j 1 -np
-# snakemake -j 1 --profile sge -np
-# snakemake -j 1 --profile sge --use-conda -np
-# snakemake -j 1 --cluster "qsub -cwd -pe smp {threads} -l mem_free={resources.mem_mb}M -l h_rt={resources.walltime}"
+# snakemake -j 10 --profile sge --use-conda -np
 
 samples: ['Sample1', 'Sample2']
+build: [b38]
